Web In-Pulso cambio para visualizar whatsapp en página 'Contacto'

--- a/contact.html
+++ b/contact.html
@@ -158,7 +158,7 @@ https://templatemo.com/tm-534-parallo
         <div class="social-icons-footer">
           <!-- Ícono flotante de WhatsApp -->
           <div class="whatsapp-icon-floating">
-            <a href="#" class="fa fa-whatsapp"></a>
+            <a href="#" class="fab fa-whatsapp"></a>
           </div>
           <ul>
             <li><a href="#" class="fab fa-facebook"></a></li>
