--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
 
   <link href='http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800' rel='stylesheet' type='text/css'>
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-  <link rel="stylesheet" href="css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- <link rel="stylesheet" href="css/all.min.css" /> -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/templatemo-style.css" />
 </head>
@@ -174,23 +175,33 @@
 
       </section>
 
-      <!-- Page footer -->
-      <footer class="row">
+       <!-- Page footer -->
+       <footer class="row">
         <div class="social-icons-footer">
           <!-- Ícono flotante de WhatsApp -->
           <div class="whatsapp-icon-floating">
-            <a href="#" class="fab fa-whatsapp"></a>
+            <a href="https://wa.me/51982367672" class="fab fa-whatsapp" target="_blank"></a>
           </div>
           <ul>
-            <li><a href="#" class="fab fa-facebook"></a></li>
-            <li><a href="#" class="fab fa-twitter"></a></li>
+            <li><a href="https://www.facebook.com/share/12MN8MG3v61/" class="fab fa-facebook" target="_blank"></a></li>
+            <!-- <li><a href="#" class="fa-brands fa-x-twitter"></a></li> -->
+            <!-- <li>
+              <a href="#" class="social-icon" title="X (Twitter)">
+                <span class="icon-wrapper">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="#d0984e">
+                    <path
+                      d="M20.36 3H17.8L13.52 8.42 8.89 3H3l7.54 8.7L3.63 21h2.57l4.83-6.06 5.97 6.06h5.06l-8.19-9.39L20.36 3z" />
+                  </svg>
+                </span>
+              </a>
+            </li> -->
             <li><a href="#" class="fab fa-instagram"></a></li>
-            <li><a href="#" class="fab fa-linkedin"></a></li>
+            <li><a href="https://www.linkedin.com/company/in-pulso-eventos/" class="fab fa-linkedin" target="_blank"></a></li>
           </ul>
         </div>
         <p class="col-12 text-white text-center tm-copyright-text">
-          Copyright &copy; 2020 App Landing Page.
-          Designed by <a href="#" class="tm-copyright-link">TemplateMo</a>
+          <small>Copyright &copy; 2025 Website.
+            Designed by <a href="#" class="tm-copyright-link">David Sebastián</a></small>
         </p>
       </footer>
     </div>
