Web In-Pulso añadidos: texto, tarjetas, colores de terjetas, títulos, íconos y enlace para Instagram David Sebastián

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 </head>
 
 <body id="aboutPage">
-  <div class="parallax-window" data-parallax="scroll" data-image-src="img/bg-01.jpg">
+  <div class="parallax-window" data-parallax="scroll" data-image-src="img/evento_11.png">
     <div class="container-fluid">
       <div class="row tm-brand-row">
         <div class="col-lg-4 col-11">
@@ -44,7 +44,7 @@
                   </li>
                   <li class="nav-item green-highlight active">
                     <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Nosotros<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <div class="tm-nav-link-highlight"></div>
@@ -68,16 +68,16 @@
       <!-- About -->
       <section class="row" id="tmAbout">
         <header class="col-12 tm-about-header">
-          <h2 class="text-uppercase text-center text-dark tm-about-page-title">About this app</h2>
+          <h2 class="text-uppercase text-center tm-about-page-title">Acerca de Nosostros</h2>
           <hr class="tm-about-title-hr">
         </header>
         <div class="col-lg-4">
           <div class="tm-bg-black-transparent tm-about-box">
             <div class="tm-about-number-container">0.1</div>
-            <h3 class="tm-about-name">Best Quality</h3>
+            <h3 class="tm-about-name">Alta Gama</h3>
             <p class="tm-about-description">
-              Integer dapibus aliquam accumsan. Nam diam elit, mollis quis elit sed, hendrerit dapibus eros. Cras auctor
-              laoreet tortor eget. BG #0F1D20
+              Cada decisión detrás del evento es intencional. Desde la iluminación hasta la atmósfera, creamos con
+              maestría invisible para que tu marca brille sin tener que gritar.
             </p>
           </div>
         </div>
@@ -85,10 +85,10 @@
         <div class="col-lg-4">
           <div class="tm-bg-black-transparent tm-about-box">
             <div class="tm-about-number-container">0.2</div>
-            <h3 class="tm-about-name">Satisfaction</h3>
+            <h3 class="tm-about-name">Confianza</h3>
             <p class="tm-about-description">
-              Parallo is a HTML landing page template based on Bootstrap v4.3.1 framework. Please tell your friends
-              about TemplateMo.
+              Sabemos lo que está en juego. Por eso, acompañamos con precisión, calidez y compromiso. Porque más que
+              eventos, construimos relaciones duraderas.
             </p>
             <a href="#tmFeatures" class="btn btn-tertiary tm-btn-app-feature">More</a>
           </div>
@@ -97,12 +97,14 @@
         <div class="col-lg-4">
           <div class="tm-bg-black-transparent tm-about-box">
             <div class="tm-about-number-container">0.3</div>
-            <h3 class="tm-about-name">High Return</h3>
+            <h3 class="tm-about-name">Estrategia</h3>
             <p class="tm-about-description">
-              You are allowed to use this for commercial purpose or personal site.
+              Tu inversión no se pierde en protocolos vacíos. Cada evento es una estrategia viva que posiciona,
+              diferencia y potencia lo que realmente quieres decir al mundo.
             </p>
             <p class="tm-about-description">
-              You are NOT allowed to redistribute this template on any download site or template collection sites.
+              No solo logran objetivos, sino que transforman percepciones, inspiran acción y fortalecen tu identidad
+              corporativa.
             </p>
             <a href="#tmFeatures" class="btn btn-secondary tm-btn-app-feature">Details</a>
           </div>
@@ -113,9 +115,8 @@
       <section id="tmAppFeatures">
         <div class="row">
           <header class="col-12 text-center text-white tm-bg-black-transparent p-5 tm-app-header">
-            <h2 class="text-uppercase mb-3 tm-app-feature-header">App Features</h2>
-            <p class="mb-0 small">Suspendisse finibus tellus eget sem lacinia, vel lacinia libero consequat. Sed
-              imperdiet placerat vehicula.</p>
+            <h2 class="text-uppercase mb-3 tm-app-feature-header">Si Crees en una Idea</h2>
+            <p class="mb-0 small">Nosotros creemos en ti y te ayudamos a construirla.</p>
           </header>
         </div>
 
@@ -126,9 +127,10 @@
                 <i class="fas fa-2x fa-star tm-app-feature-icon"></i>
               </div>
               <div class="tm-app-feature-description-box">
-                <h3 class="mb-4 tm-app-feature-title">Phasellus est lorem</h3>
-                <p class="tm-app-feature-description">Suspendisse finibus tellus eget sem lacinia, vel lacinia libero
-                  consequat. Sed imperdiet placerat vehicula. Etiam eu egestas nibh. In turpis ligula.</p>
+                <h3 class="mb-4 tm-app-feature-title">Distinción</h3>
+                <p class="tm-app-feature-description">Cada evento tiene alma. La nuestra es cuidar cada detalle con
+                  sutileza, elegancia y amor por lo que hacemos. Ayudamos a destacar lo que no es visible… sino
+                  que lo sientas.</p>
               </div>
             </div>
           </div>
@@ -139,9 +141,10 @@
                 <i class="fas fa-2x fa-cogs tm-app-feature-icon"></i>
               </div>
               <div class="tm-app-feature-description-box">
-                <h3 class="mb-4 tm-app-feature-title">Proin scelerisque</h3>
-                <p class="tm-app-feature-description">Etiam fermentum nisi lorem, vel pharetra ipsum egestas non. Proin
-                  odio ipsum, vestibulum quis elit quis, vulputate venenatis neque. Nam dignissim libero.</p>
+                <h3 class="mb-4 tm-app-feature-title">Organización</h3>
+                <p class="tm-app-feature-description">Damos forma y orden a tus ideas. Planeamos con sensibilidad, y
+                  ejecutamos con intención. Todo está donde debe estar, no solo por estructura, sino porque entendemos
+                  lo que importa.</p>
               </div>
             </div>
           </div>
@@ -152,9 +155,10 @@
                 <i class="fas fa-2x fa-magic tm-app-feature-icon"></i>
               </div>
               <div class="tm-app-feature-description-box">
-                <h3 class="mb-4 tm-app-feature-title">Integer tempor</h3>
-                <p class="tm-app-feature-description">Aliquam erat volutpat. Phasellus a odio eget enim luctus
-                  vestibulum nec sed tellus. Pellentesque aliquam sem quis lobortis laoreet. Donec egestas.</p>
+                <h3 class="mb-4 tm-app-feature-title">Inolvidable</h3>
+                <p class="tm-app-feature-description">No buscamos que lo recuerdes… sino que no puedas olvidarlo.
+                  Creamos espacios donde el tiempo se detiene, y la emoción queda suspendida en cada gesto, en cada
+                  mirada, en cada instante.</p>
               </div>
             </div>
           </div>
@@ -165,9 +169,10 @@
                 <i class="fas fa-2x fa-heart tm-app-feature-icon"></i>
               </div>
               <div class="tm-app-feature-description-box">
-                <h3 class="mb-4 tm-app-feature-title">Curabitur dignissim</h3>
-                <p class="tm-app-feature-description">Donec ut odio nec nisl feugiat dictum. Quisque sit amet mattis
-                  dolor. Morbi et erat vestibulum, finibus nunc quis, fermentum eros. Cras laoreet eros.</p>
+                <h3 class="mb-4 tm-app-feature-title">Vínculo</h3>
+                <p class="tm-app-feature-description">Escuchamos de verdad. Caminamos contigo desde el primer “sí
+                  quiero” hasta la última sonrisa del evento. No solo organizamos: acompañamos. Porque lo más importante
+                  no es lo que hacemos, sino cómo lo compartimos.</p>
               </div>
             </div>
           </div>
@@ -175,8 +180,8 @@
 
       </section>
 
-       <!-- Page footer -->
-       <footer class="row">
+      <!-- Page footer -->
+      <footer class="row">
         <div class="social-icons-footer">
           <!-- Ícono flotante de WhatsApp -->
           <div class="whatsapp-icon-floating">
@@ -196,12 +201,13 @@
               </a>
             </li> -->
             <li><a href="#" class="fab fa-instagram"></a></li>
-            <li><a href="https://www.linkedin.com/company/in-pulso-eventos/" class="fab fa-linkedin" target="_blank"></a></li>
+            <li><a href="https://www.linkedin.com/company/in-pulso-eventos/" class="fab fa-linkedin"
+                target="_blank"></a></li>
           </ul>
         </div>
         <p class="col-12 text-white text-center tm-copyright-text">
           <small>Copyright &copy; 2025 Website.
-            Designed by <a href="#" class="tm-copyright-link">David Sebastián</a></small>
+            Designed by <a href="https://www.instagram.com/davidsebasds?igsh=MTYzdTdsb2d2NTR6" class="tm-copyright-link">David Sebastián</a></small>
         </p>
       </footer>
     </div>
