--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@ https://templatemo.com/tm-534-parallo
                   </li>
                   <li class="nav-item">
                     <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="about.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
                     <div class="tm-nav-link-highlight"></div>
@@ -204,7 +204,7 @@ https://templatemo.com/tm-534-parallo
         </div>
         <p class="col-12 text-white text-center tm-copyright-text">
           <small>Copyright &copy; 2025 Website.
-            Designed by <a href="#" class="tm-copyright-link">David Sebastián</a></small>
+            Designed by <a href="https://www.instagram.com/davidsebasds?igsh=MTYzdTdsb2d2NTR6" class="tm-copyright-link">David Sebastián</a></small>
         </p>
       </footer>
     </div>
