--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- <link href="css/font-awesome.min.css" rel="stylesheet" media="screen"> -->
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.4.0/css/all.css"> -->
   <!-- <link rel="stylesheet" href="css/all.min.css" /> -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/templatemo-style.css" />
@@ -50,7 +51,7 @@ https://templatemo.com/tm-534-parallo
                   </li>
                   <li class="nav-item">
                     <div class="tm-nav-link-highlight"></div>
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="about.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
                     <div class="tm-nav-link-highlight"></div>
@@ -92,36 +93,42 @@ https://templatemo.com/tm-534-parallo
       <div class="row" id="tmFeatures">
         <div class="col-lg-4">
           <div class="tm-bg-white-transparent tm-feature-box">
-            <h3 class="tm-feature-name">High Performance</h3>
+            <h3 class="tm-feature-name">Excelencia al Detalle</h3>
 
             <div class="tm-feature-icon-container">
-              <i class="fas fa-3x fa-server"></i>
+              <i class="fas fa-3x fa-award"></i>
             </div>
 
-            <p class="text-center">Download and use this layout for your sites. Total 5 HTML pages included.</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="tm-bg-white-transparent tm-feature-box">
-            <h3 class="tm-feature-name">Fast Support</h3>
-
-            <div class="tm-feature-icon-container">
-              <i class="fas fa-3x fa-headphones"></i>
-            </div>
-            <p class="text-center">You are allowed to use this for commercial purpose or personal site.
+            <p class="text-center">
+              Creamos experiencias únicas que conectan con el alma de tu empresa y elevan tu marca al siguiente nivel.
             </p>
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="tm-bg-white-transparent tm-feature-box">
-            <h3 class="tm-feature-name">App Marketing</h3>
+            <h3 class="tm-feature-name">Presencia Total</h3>
 
             <div class="tm-feature-icon-container">
-              <i class="fas fa-3x fa-satellite-dish"></i>
+              <i class="fas fa-3x fa-user-check"></i>
             </div>
-            <p class="text-center">You are NOT allowed to redistribute this template on any download site.
+            <p class="text-center">
+              Desde el primer contacto hasta el cierre del evento, te acompañamos paso a paso, alineándonos con tu
+              visión y cuidando cada detalle.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="tm-bg-white-transparent tm-feature-box">
+            <h3 class="tm-feature-name">Ideas que Marcan</h3>
+
+            <div class="tm-feature-icon-container">
+              <i class="fas fa-3x fa-bullseye"></i>
+            </div>
+            <p class="text-center">
+              Diseñamos eventos con propósito. No solo organizamos, creamos momentos memorables que transforman,
+              inspiran y dejan huella.
             </p>
           </div>
         </div>
@@ -165,12 +172,13 @@ https://templatemo.com/tm-534-parallo
               </a>
             </li> -->
             <li><a href="#" class="fab fa-instagram"></a></li>
-            <li><a href="https://www.linkedin.com/company/in-pulso-eventos/" class="fab fa-linkedin" target="_blank"></a></li>
+            <li><a href="https://www.linkedin.com/company/in-pulso-eventos/" class="fab fa-linkedin"
+                target="_blank"></a></li>
           </ul>
         </div>
-        <p class="col-12 text-white text-center tm-copyright-text">
+        <p class="col-12 text-center tm-copyright-text">
           <small>Copyright &copy; 2025 Website.
-            Designed by <a href="#" class="tm-copyright-link">David Sebastián</a></small>
+            Designed by <a href="https://www.instagram.com/davidsebasds?igsh=MTYzdTdsb2d2NTR6" class="tm-copyright-link">David Sebastián</a></small>
         </p>
       </footer>
     </div>
