Web In-Pulso añadidos: los últimos texto y título pendientes, cambio de colores en algunos íconos de servicios y texto en gallery. Web casi lista. Pendiente 'Regalo' y dar las 'Gracias'

--- a/contact.html
+++ b/contact.html
@@ -122,16 +122,14 @@ https://templatemo.com/tm-534-parallo
 
             <i class="mx-auto mb-5 fas fa-3x fa-address-card tm-app-feature-icon"></i>
 
-            <h3 class="tm-service-tab-title">Maecenas in aliquam lorem</h3>
+            <h3 class="tm-service-tab-title">Tu evento comienza con un mensaje</h3>
             <p class="tm-service-tab-p">
-              Proin rutrum massa quis erat mollis iaculis. Vestibulum
-              a risus ex. Nunc rhoncus, justo at blandit cursus, orci
-              erat molestie felis, id ullamcorper mauris felis eu eros.
+              ¿Tienes una idea en mente, pero no sabes por dónde empezar?
+              Cada gran historia inicia con una conversación.
+              Déjanos tus datos y descubre cómo transformamos tus ideas en experiencias memorables.
             </p>
             <p class="mb-0">
-              Donec turpis augue, mollis eu erat in, posuere congue
-              sapien. Maecenas facilisis dui sit amet ornare aliquam.
-              Paesent malesuada mi a est pulvinar.
+              Conecta con nosotros hoy y da el primer paso hacia un evento que nadie olvidará.
             </p>
           </div>
         </div>
@@ -176,12 +174,14 @@ https://templatemo.com/tm-534-parallo
             </a>
           </li> -->
             <li><a href="#" class="fab fa-instagram"></a></li>
-            <li><a href="https://www.linkedin.com/company/in-pulso-eventos/" class="fab fa-linkedin" target="_blank"></a></li>
+            <li><a href="https://www.linkedin.com/company/in-pulso-eventos/" class="fab fa-linkedin"
+                target="_blank"></a></li>
           </ul>
         </div>
         <p class="col-12 text-white text-center tm-copyright-text">
           <small>Copyright &copy; 2025 Website.
-            Designed by <a href="https://www.instagram.com/davidsebasds?igsh=MTYzdTdsb2d2NTR6" class="tm-copyright-link">David Sebastián</a></small>
+            Designed by <a href="https://www.instagram.com/davidsebasds?igsh=MTYzdTdsb2d2NTR6"
+              class="tm-copyright-link">David Sebastián</a></small>
         </p>
       </footer>
     </div>
