--- a/services.html
+++ b/services.html
@@ -80,9 +80,20 @@ https://templatemo.com/tm-534-parallo
             <div class="tm-bg-black-transparent text-center tm-services-header">
               <h2 class="text-uppercase tm-services-page-title">Nuestros Servicios</h2>
               <p class="tm-services-description mb-0 small">
-                This is a parallax movement background image "coffee glass". <br>
-                Aliquam egestas lectus semper enim malesuada, in convallis nunc sagittis.<br>
-                Pellentesque quis tellus vel tortor malesuada egestas.
+                En <strong>In-Pulso</strong> creamos, dirigimos y ejecutamos <strong>eventos corporativos</strong> de
+                alto impacto en Perú.
+                Nuestro enfoque combina estrategia, creatividad y una producción impecable para ofrecer resultados
+                memorables.
+                Entre nuestros servicios destacan:
+                🔹 Activaciones de marca 🔹 Inauguraciones de empresas o sedes 🔹 Lanzamientos de productos o servicios
+                🔹 Eventos de branding e identidad corporativa 🔹 Ferias y exposiciones empresariales
+                🔹 Producción audiovisual corporativa 🔹 Ambientación y escenografía personalizada
+                🔹 Gestión integral del evento
+              </p>
+              <p>
+                Todo esto con una sola promesa: elevar el estándar de lo que un evento puede generar en la mente y
+                corazón de quienes asisten.
+              </p>
               </p>
             </div>
           </div>
@@ -91,19 +102,22 @@ https://templatemo.com/tm-534-parallo
         <div class="col-12">
           <div class="tm-bg-black-transparent tm-services-detail-box">
             <p>
-              Aenean convallis justo purus, id pulvinar enim finibus vitae. Fusce et bibendum nisi, vitae mollis turpis.
-              Aliquam tellus mi, maximus vel orci
-              imperdiet, convallis cursus tortor. Donec sollicitudin metus sit amet nisl rhoncus, id ultrices risus
-              interdum. Proin mollis nulla nulla, ac cursus enim ornare a. Cras quis porta lectus. Pellentesque eu
-              ultrices arcu. Proin ac tristique dui. Praesent mi odio, aliquam ac leo sit amet, dictum sodales diam.
+              Sabemos que organizar un evento no es solo una tarea, es una responsabilidad que lleva tu nombre, tu marca
+              y tus objetivos.
+              Por eso, en <strong>In-Pulso</strong> trabajamos como un socio estratégico, no solo como organizadores.
+              Escuchamos lo que necesitas, traducimos tus ideas en experiencias vivas, y cuidamos cada detalle como si
+              fuera nuestro.
             </p>
             <p>
-              Quisque commodo, orci eget suscipit vestibulum, metus orci fringilla urna, eget dignissim justo odio sit
-              amet tellus. Morbi dapibus molestie
-              massa nec congue. Etiam lacinia pretium psuere. Integer sodales porttitor lobortis. Nam vestibulum
-              vestibulum lectus non pulvinar.
-              Vivamus eget sapien vitae magna lobortis rhoncus molestie sit amet est. Fusce ultrices justo vitae blandit
-              consequat.
+              No se trata solo de montar un evento. Se trata de generar emociones, crear una verdadera experiencia, y
+              lograr que tu audiencia recuerde tu marca con orgullo.
+              Estamos aquí para facilitarte el proceso, sorprenderte y hacerte sentir acompañado desde el primer
+              instante hasta mucho después del evento.
+            </p>
+            <p>
+              Si buscas más que un organizador, si deseas una experiencia inolvidable para tu equipo, tus clientes o tu
+              público...
+              Entonces, estamos hechos para hacerlo juntos.
             </p>
           </div>
         </div>
@@ -192,12 +206,14 @@ https://templatemo.com/tm-534-parallo
               </a>
             </li> -->
             <li><a href="#" class="fab fa-instagram"></a></li>
-            <li><a href="https://www.linkedin.com/company/in-pulso-eventos/" class="fab fa-linkedin" target="_blank"></a></li>
+            <li><a href="https://www.linkedin.com/company/in-pulso-eventos/" class="fab fa-linkedin"
+                target="_blank"></a></li>
           </ul>
         </div>
         <p class="col-12 text-white text-center tm-copyright-text">
           <small>Copyright &copy; 2025 Website.
-            Designed by <a href="https://www.instagram.com/davidsebasds?igsh=MTYzdTdsb2d2NTR6" class="tm-copyright-link">David Sebastián</a></small>
+            Designed by <a href="https://www.instagram.com/davidsebasds?igsh=MTYzdTdsb2d2NTR6"
+              class="tm-copyright-link">David Sebastián</a></small>
         </p>
       </footer>
     </div>
