--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@ https://templatemo.com/tm-534-parallo
             <div class="tm-bg-black-transparent text-center tm-services-header tm-testimonials-header">
               <h2 class="text-uppercase tm-services-page-title tm-testimonials-page-title">Gallery</h2>
               <p class="tm-services-description mb-0 small">
-                Parallax movement background page ice mountain for testimonials.
+                También puedes revisar nuestras redes sociales ingresando en cada ícono.
               </p>
             </div>
           </div>
